--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -20,8 +20,8 @@ jobs:
           source cron_convert.sh
           echo "configed CRON_HOURS ${{ vars.CRON_HOURS }}"
           persist_execute_log ${{ github.event_name }} ${{ vars.CRON_HOURS }}
-          #git config user.name zhuzhuxia
-          #git config user.email 742491842@qq.com
+          git config user.name zhuzhuxia
+          git config user.email 742491842@qq.com
           git add .
           current=`TZ=Asia/Shanghai date '+%Y-%m-%d %H:%M:%S'`
           git commit -m "[${current}] random cron trigger by ${{ github.event_name }}"
